Rscript on express.server

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,8 @@
 </head>
 <body>
     <p>GO AHEAD, HIT THAT BUTTON. IT'S OK.</p>
-    <button onclick="<%= r %>"> Run! </button>
+    <form action="run">
+        <input type="submit" value="Button">
+    </form>
 </body>
 </html>
