--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,6 +10,7 @@ body {
     background-color: #282828;
     color: #ebebeb;
     text-shadow: 1px 1px 2px #000;
+    overflow: auto;
 }
 .main {
     max-width: 436px;
@@ -17,7 +18,6 @@ body {
     background: #3b3b3b;
     padding: 10px 16px 0 16px;
     box-shadow: 0 0 10px 0 #000;
-    overflow: hidden;
     word-wrap: break-word;
 }
 h1 {
@@ -98,4 +98,5 @@ a {
     font-size: 0.4em;
     font-weight: bold;
     text-align: center;
+    padding-bottom: 0.5em;
 }
