--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,17 @@
     <title>R-graph</title>
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script>
+        var plot = $.ajax({
+            url: '/rplot.png'
+        });
+        plot.fail(function(){
+            setTimeout(function () {
+                location.reload()
+            }, 3000);
+        });
+    </script>
 </head>
 <body>
 <div class="main">
