--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,41 +1,52 @@
-html, body {
-    margin: 0;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    position: fixed;
-}
 body {
     font-family: 'Lucida Grande', Tahoma, Verdana, Arial, sans-serif;
-    background-color: #282828;
-    color: #ebebeb;
-    text-shadow: 1px 1px 2px #000;
+    background-image: url(../image/background.jpg);
+    color: #332D2D;
+    text-shadow: 1px 1px 1px #332D2D;
     overflow: auto;
 }
+textarea:focus, button:focus  {
+    outline: none;
+}
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: auto;
+    min-height: 55px;
+    background: url(../image/header.jpg) repeat left top;
+    padding: 15px 0;
+}
+.logoWrapper {
+    float: left;
+    border: 0;
+    margin-left: 40px;
+    padding: 0;
+}
 .main {
-    max-width: 436px;
-    margin: 50px auto 0 auto;
-    background: #3b3b3b;
+    max-width: 780px;
+    height: 700px;
+    margin: 85px auto 0 auto;
+    background: #FFF;
     padding: 10px 16px 0 16px;
-    box-shadow: 0 0 10px 0 #000;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     word-wrap: break-word;
 }
-h1 {
+.post-header{
+    background: #f8f5ed;
+    font-size: 12px;
+    padding: 8px 12px 3px;
+    color: #897c56;
+    line-height: 1.78571;
+    text-shadow: none;
+}
+.rscript{
     display: block;
-    font-size: 1.6em;
-    font-weight: bold;
-    text-align: center;
-    -webkit-margin-before: 0.67em;
-    -webkit-margin-after: 0.67em;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;
-}
-h1 a{
-    color: #E46A6B;
-    margin-bottom: .6em;
-}
-a {
-    text-decoration: none;
+    font-size: 16px;
+    margin-top: 5px;
+    border: none;
+    border-left: 4px solid #cf866c;
 }
 .desc {
     display: block;
@@ -43,60 +54,61 @@ a {
     text-align: center;
     font-size: 1.3em;
 }
-.form-btn {
-    text-align: center;
-}
 .btn {
-    -moz-box-shadow:inset 0px 1px 0px 0px #a6827e;
-    -webkit-box-shadow:inset 0px 1px 0px 0px #a6827e;
-    box-shadow:inset 0px 1px 0px 0px #a6827e;
-    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #7d5d3b), color-stop(1, #634b30));
-    background:-moz-linear-gradient(top, #7d5d3b 5%, #634b30 100%);
-    background:-webkit-linear-gradient(top, #7d5d3b 5%, #634b30 100%);
-    background:-o-linear-gradient(top, #7d5d3b 5%, #634b30 100%);
-    background:-ms-linear-gradient(top, #7d5d3b 5%, #634b30 100%);
-    background:linear-gradient(to bottom, #7d5d3b 5%, #634b30 100%);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#7d5d3b', endColorstr='#634b30',GradientType=0);
-    background-color:#7d5d3b;
+    -moz-box-shadow:inset 0px 1px 0px 0px #cf866c;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #cf866c;
+    box-shadow:inset 0px 1px 0px 0px #cf866c;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #c8533c), color-stop(1, #d55940));
+    background:-moz-linear-gradient(top, #c8533c 5%, #d55940 100%);
+    background:-webkit-linear-gradient(top, #c8533c 5%, #d55940 100%);
+    background:-o-linear-gradient(top, #c8533c 5%, #d55940 100%);
+    background:-ms-linear-gradient(top, #c8533c 5%, #d55940 100%);
+    background:linear-gradient(to bottom, #c8533c 5%, #d55940 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#c8533c', endColorstr='#d55940',GradientType=0);
+    background-color:#c8533c;
     -moz-border-radius:3px;
     -webkit-border-radius:3px;
     border-radius:3px;
-    border:1px solid #54381e;
-    display:inline-block;
+    border:1px solid #481e16;
+    display:block;
     cursor:pointer;
     color:#ffffff;
+    font-family:Arial;
     font-size:13px;
     padding:6px 24px;
     text-decoration:none;
-    text-shadow:0px 1px 0px #4d3534;
-    margin-bottom: 1.5em;
+    text-shadow:0px 1px 0px #ae4834;
+    margin-top: 5px;
 }
 .btn:hover {
-    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #634b30), color-stop(1, #7d5d3b));
-    background:-moz-linear-gradient(top, #634b30 5%, #7d5d3b 100%);
-    background:-webkit-linear-gradient(top, #634b30 5%, #7d5d3b 100%);
-    background:-o-linear-gradient(top, #634b30 5%, #7d5d3b 100%);
-    background:-ms-linear-gradient(top, #634b30 5%, #7d5d3b 100%);
-    background:linear-gradient(to bottom, #634b30 5%, #7d5d3b 100%);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#634b30', endColorstr='#7d5d3b',GradientType=0);
-    background-color:#634b30;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #d55940), color-stop(1, #c8533c));
+    background:-moz-linear-gradient(top, #d55940 5%, #c8533c 100%);
+    background:-webkit-linear-gradient(top, #d55940 5%, #c8533c 100%);
+    background:-o-linear-gradient(top, #d55940 5%, #c8533c 100%);
+    background:-ms-linear-gradient(top, #d55940 5%, #c8533c 100%);
+    background:linear-gradient(to bottom, #d55940 5%, #c8533c 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#d55940', endColorstr='#c8533c',GradientType=0);
+    background-color:#d55940;
 }
 .btn:active {
     position: relative;
     top: 1px;
+    outline: none
 }
 .plot_container {
+    margin-top: 5px;
     text-align: center;
 }
 .plot {
-    width: 430px;
-    height: 430px;
+    width: 400px;
+    height: 400px;
 }
-.foot{
+.footer{
     display: block;
     margin: 0.7em 0;
     font-size: 0.4em;
-    font-weight: bold;
+    font-weight: normal;
     text-align: center;
     padding-bottom: 0.5em;
+    text-shadow: none;
 }
