--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,39 +5,56 @@
     <title>R-graph</title>
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script>
         var plot = $.ajax({
             url: '/rplot.png'
         });
         plot.fail(function(){
             setTimeout(function () {
-                location.reload()
+                window.location.reload()
             }, 3000);
+        });
+    </script>
+    <script>
+        $(document).ready(function(){
+            var plot_param;
+            $("#submit").click(function(){
+                plot_param = $("#plot_param").val();
+                $.post("http://localhost:3000/run", {plot_param: plot_param}, function (data) {
+                    if (typeof data.redirect == 'string') {
+                        window.location = data.redirect
+                    }
+                });
+            });
         });
     </script>
 </head>
 <body>
-<div class="main">
-    <h1><a href="http://localhost:3000/">R-graph</a></h1>
-    <div class="desc">
-        <p>Wanna make some plots?</p>
-        <p>Relax</p>
-        <p>Press the button...</p>
+    <div class="header">
+        <div class="logoWrapper">
+            <a href="http://localhost:3000/">
+                <img src="./image/R_logo.png">
+            </a>
+        </div>
     </div>
-    <form action="run" class="form-btn">
-        <button class="btn" type="submit">
-            <i class="fa fa-area-chart fa-2x"></i>
-        </button>
-    </form>
-    <div class="plot_container">
-    <% if (exitCode == 0) { %>
-        <img class="plot" src="./rplot.png">
-    <%} else {%>
-        <p>Something went wrong</p>
-    <%}%>
+    <div class="main">
+        <div class="post-header">
+            <i class="fa fa-download"></i>
+            Set graph parameters!
+            <textarea class="rscript" rows="10" cols="45" id="plot_param" maxlength="40"></textarea>
+            <button class="btn" type="submit" id="submit">Run!</button>
+        </div>
+        <div class="plot_container">
+            <% if (exitCode == 0) { %>
+            <img class="plot" src="./rplot.png">
+            <%} else if (exitCode == 1488) {%>
+            <p>Graph should be here</p>
+            <%} else {%>
+            <p>Something went wrong</p>
+            <%}%>
+        </div>
     </div>
-    <div class="foot">VjjdDev: © 2016</div>
-</div>
+    <!--<div class="footer">VjjdDev: © 2016</div>-->
 </body>
 </html>
