--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,13 +1,15 @@
 body {
     font-family: 'Lucida Grande', Tahoma, Verdana, Arial, sans-serif;
-    background-image: url(../image/background.jpg);
+    background-image: url(../images/background.jpg);
     color: #332D2D;
     text-shadow: 1px 1px 1px #332D2D;
     overflow: auto;
 }
+
 textarea:focus, button:focus  {
     outline: none;
 }
+
 .header {
     position: fixed;
     top: 0;
@@ -15,15 +17,17 @@ textarea:focus, button:focus  {
     right: 0;
     height: auto;
     min-height: 55px;
-    background: url(../image/header.jpg) repeat left top;
+    background: url(../images/header.jpg) repeat left top;
     padding: 15px 0;
 }
+
 .logoWrapper {
     float: left;
     border: 0;
     margin-left: 40px;
     padding: 0;
 }
+
 .main {
     max-width: 780px;
     height: 700px;
@@ -33,6 +37,7 @@ textarea:focus, button:focus  {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     word-wrap: break-word;
 }
+
 .post-header{
     background: #f8f5ed;
     font-size: 12px;
@@ -41,6 +46,7 @@ textarea:focus, button:focus  {
     line-height: 1.78571;
     text-shadow: none;
 }
+
 .rscript{
     display: block;
     font-size: 16px;
@@ -48,12 +54,14 @@ textarea:focus, button:focus  {
     border: none;
     border-left: 4px solid #cf866c;
 }
+
 .desc {
     display: block;
     margin: 1.3em 0;
     text-align: center;
     font-size: 1.3em;
 }
+
 .btn {
     -moz-box-shadow:inset 0px 1px 0px 0px #cf866c;
     -webkit-box-shadow:inset 0px 1px 0px 0px #cf866c;
@@ -80,6 +88,7 @@ textarea:focus, button:focus  {
     text-shadow:0px 1px 0px #ae4834;
     margin-top: 5px;
 }
+
 .btn:hover {
     background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #d55940), color-stop(1, #c8533c));
     background:-moz-linear-gradient(top, #d55940 5%, #c8533c 100%);
@@ -90,19 +99,23 @@ textarea:focus, button:focus  {
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#d55940', endColorstr='#c8533c',GradientType=0);
     background-color:#d55940;
 }
+
 .btn:active {
     position: relative;
     top: 1px;
     outline: none
 }
+
 .plot_container {
     margin-top: 5px;
     text-align: center;
 }
+
 .plot {
     width: 400px;
     height: 400px;
 }
+
 .footer{
     display: block;
     margin: 0.7em 0;
