--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,14 +6,14 @@
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="./script/parameters.js"></script>
-    <script src="./script/reload.js"></script>
+    <script src="./jquery/parameters.js"></script>
+    <script src="./jquery/reload.js"></script>
 </head>
 <body>
     <div class="header">
         <div class="logoWrapper">
             <a href="http://localhost:3000/">
-                <img src="./image/R_logo.png">
+                <img src="./images/R_logo.png">
             </a>
         </div>
     </div>
