--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="./jquery/parameters.js"></script>
-    <script src="./jquery/reload.js"></script>
 </head>
 <body>
     <div class="header">
@@ -26,7 +25,7 @@
         </div>
         <div class="plot_container">
             <% if (exitCode == 0) { %>
-            <img class="plot" src="./rplot.png">
+            <img class="plot" src=<%=currFileName%>>
             <%} else if (exitCode == 1488) {%>
             <p>Graph should be here</p>
             <%} else if (exitCode == 322) {%>
