JQuery.validate + node.validator: added, simple.

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,11 +1,27 @@
-<p>
-ID: <%= user.id %><br/>
-Username: <%= user.username %><br/>
-Name: <%= user.displayName %><br/>
-<% if (user.emails) { %>
-Email: <a href="http://ru.dotabuff.com/matches/2127937414">
-        <%= user.emails[0].value %>
-    </a>
-<% } %>
-</p>
-<a href="/logout">Log out</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>LogIn</title>
+    <link rel="stylesheet" type="text/css" href="css/login.css" />
+</head>
+<body>
+<div class="main">
+    <h1>Profile</h1>
+    <div class="data">
+        <p>
+            ID: <%= user.id %><br/>
+            Username: <%= user.username %><br/>
+            <% if (user.emails) { %>
+            Email: <a href="http://ru.dotabuff.com/matches/2127937414">
+                <%= user.emails[0].value %>
+            </a>
+            <% } %>
+        </p>
+    </div>
+    <a href="/logout">Log out</a>
+</div>
+</body>
+
+
+
