--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="./jquery/parameters.js"></script>
+    <script src="./jquery/plotParameters.js"></script>
 </head>
 <body>
 
