--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,13 +1,26 @@
-<form action="/login" method="post">
-	<div>
-	<label>Username:</label>
-	<input type="text" name="username"/><br/>
-	</div>
-	<div>
-	<label>Password:</label>
-	<input type="password" name="password"/>
-	</div>
-	<div>
-	<input type="submit" value="Submit"/>
-	</div>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>LogIn</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/login.css" />
+</head>
+<body>
+<div class="main">
+	<h1>Log in!</h1>
+	<form action="/login" method="post">
+		<div class="form-group">
+			<label>Username:</label>
+			<input type="text" name="username" class="form-control"/><br/>
+		</div>
+		<div class="form-group">
+			<label>Password:</label>
+			<input type="password" name="password" class="form-control"/>
+		</div>
+		<div class="form-group">
+			<input type="submit" value="Submit"/>
+		</div>
+	</form>
+</div>
+</body>
