--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>LogIn</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/login.css" />
+	<link rel="stylesheet" type="text/css" href="css/auth.css" />
 </head>
 <body>
 <div class="main">
